Fixes searchResults expander button alignment

--- a/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
+++ b/web-ui/src/main/resources/catalog/style/gn_search_geocat.less
@@ -402,9 +402,6 @@ h1, h2, h3, h4, h5, h6,
   padding: 0;
   position: relative;
 }
-[ng-search-form] {
-  margin: 0 15px;
-}
 
 @media (min-width: @screen-md-min) {
   html, body,
